syntax = "proto3";

package api;

service Internal {
    rpc GetWallet (WalletSearchRequest) returns (WalletSearchResult) {}
    rpc StoreWallet (WalletStorageRequest) returns (WalletStorageResult) {}
}

message WalletSearchRequest {
    string EncryptedHashPerson = 1;
}

message WalletStorageRequest {
    string EncryptedBioData = 1;
    Signature SignatureBioData = 2;
    string EncryptedWalletData = 3;
    Signature SignatureWalletData = 4;
}

message WalletStorageResult {
    string BioTransactionHash = 1;
    string DataTransactionHash = 2;
}

message WalletSearchResult {
    string EncryptedWallet = 1;
    string EncryptedAESkey = 2;
    string EncryptedWalletAddress =3;
}

message Signature {
    string Biod = 1;
    string Person = 2;
}
